fix: add routingKey

--- a/src/test/resources/application.conf
+++ b/src/test/resources/application.conf
@@ -6,6 +6,8 @@ rabbitmq {
   password = guest
   exchange.name = ""
   exchange.type = direct
+  routingKey = "q1"
+  poolSize = 5
 }
 
 simulation {
