--- a/src/test/resources/application.conf
+++ b/src/test/resources/application.conf
@@ -1,18 +1,8 @@
-rabbitmq {
-  host = localhost
-  port = 5672
-  vhost = /
-  user = guest
+amqp {
+  host     = localhost
+  port     = 5672
+  vhost    = /
+  user     = guest
   password = guest
-  exchange.name = ""
-  exchange.type = direct
-  routingKey = "q1"
   poolSize = 5
-}
-
-simulation {
-  name        = "RabbitMQ Publishing"
-  requests    = 5
-  concurrency = 2
-  payload     = "{foo:1}"
 }
